Add my_strcmp to libmy

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -7,10 +7,11 @@
 
 CC 			= 	gcc
 
-SRC			=	my_putchar.c \
-				my_putstr.c  \
-				my_puterr.c  \
-				my_count_char.c
+SRC			=	my_putchar.c    \
+				my_putstr.c     \
+				my_puterr.c     \
+				my_count_char.c \
+				my_strcmp.c
 
 OBJ			=	$(SRC:.c=.o)
 
