Add my_intlen to libmy

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -11,7 +11,8 @@ SRC			=	my_putchar.c    \
 				my_putstr.c     \
 				my_puterr.c     \
 				my_count_char.c \
-				my_strcmp.c
+				my_strcmp.c     \
+				my_intlen.c     \
 
 OBJ			=	$(SRC:.c=.o)
 
