Add my_revstr to libmy

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -13,6 +13,7 @@ SRC			=	my_putchar.c    \
 				my_count_char.c \
 				my_strcmp.c     \
 				my_intlen.c     \
+				my_revstr.c     \
 
 OBJ			=	$(SRC:.c=.o)
 
