--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -7,14 +7,15 @@
 
 CC 			= 	gcc
 
-SRC			=	my_putchar.c       \
-				my_putstr.c        \
-				my_puterr.c        \
-				my_count_char.c    \
-				my_strcmp.c        \
-				my_intlen.c        \
-				my_revstr.c        \
+SRC			=	my_count_char.c    \
 				my_int_to_strnum.c \
+				my_intlen.c        \
+				my_putchar.c       \
+				my_puterr.c        \
+				my_putstr.c        \
+				my_revstr.c        \
+				my_strcmp.c        \
+				my_strlen.c        \
 
 OBJ			=	$(SRC:.c=.o)
 
